--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
    
    
-    <title>Kumaresh Portfolio | Software Developer | Blog</title>
+    <title>Kumaresh Portfolio | Student | Blog</title>
   </head>
 
   
